--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         /* Updated for the <img> tag */
         #vis {
             /* This ensures the image scales proportionally */
-            max-width: 90%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
             margin: 0 auto;
             display: block;
             object-fit: contain; /* This is the key property */
@@ -47,8 +47,8 @@
             justify-content: center;
         }
         .step p {
-            max-width: 500px;
-            margin: 0 auto;
+            max-width: 66%
+            margin-left 55%;
             background-color: rgba(255, 255, 255, 0.95);
             padding: 1.5rem;
             border-radius: 8px;
