Correct CSS properties in index.html
Fix CSS syntax errors in .step p styles.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             justify-content: center;
         }
         .step p {
-            max-width: 66%
-            margin-left 55%;
+            max-width: 66%;
+            margin-left: 55%;
             background-color: rgba(255, 255, 255, 0.95);
             padding: 1.5rem;
             border-radius: 8px;
