--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         #scrolly > figure {
             position: sticky;
             top: 15vh;
-            height: 70vh;
+            height: 75%;
             width: 100%;
             margin: 0;
             z-index: 1;
