--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         /* The chart div itself */
         #vis {
-            width: 90%;
+            width: 100%;
             height: 100%;
             margin: 0 auto; /* Center the chart container */
             background-color: white; 
@@ -52,8 +52,8 @@
 
         /* The 'floating' caption box */
         .step p {
-            max-width: 450px;   /* Narrower width */
-            margin-left: 52%;   /* Pushed off-center to the right */
+            max-width: 40%;   /* Narrower width */
+            margin-left: 40%;   /* Pushed off-center to the right */
             margin-right: auto;
             
             background-color: rgba(255, 255, 255, 0.95);
