--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
         <article>
             <div class="step" data-step="0">
-                <p>The cost of food has been rising faster than the All Items measure of Consumer Price Inflation (CPI) for almost the whole of the last five years.</p>
+                <p>The cost of food has been rising faster than the <strong>All Items</strong> measure of Consumer Price Inflation (CPI) for almost the whole of the last five years.</p>
             </div>
             <div class="step" data-step="1">
                 <p><strong>2021: Pandemic pressures and weather challenges</strong>
-                </br>In December 2021, food price inflation was at 5.93%, driven largely by meat (8.63%) and oils (20.77%). According to BFAP, poultry - a key protein source - became more expensive across most cuts.</p>
-                <p>The Thrifty Healthy Food Basket, BFAP’s measure of the cost of a balanced diet for a family of four, also rose notably over the year. BFAP described this basket as “a nutritionally balanced combination of 26 food items from all food groups,” offering a more accurate reflection of costs for low-income households than the standard CPI basket.</p>
-                <p>Major inflation drivers included the impact of the Omicron variant, heavy rainfall that threatened crop production, limited livestock supply, and surging international oilseed prices. Oils and fats remained the most significant contributors to overall food inflation.</p>
+                </br>In December 2021, food price inflation was at 5.93%, driven largely by <strong>meat</strong> (8.63%) and <strong>oils</strong> (20.77%). According to BFAP, poultry - a key protein source - became more expensive across most cuts.</p>
+                <p>The <strong>Thrifty Healthy Food Basket</strong>, BFAP’s measure of the cost of a balanced diet for a family of four, also rose notably over the year. BFAP described this basket as “a nutritionally balanced combination of 26 food items from all food groups,” offering a more accurate reflection of costs for low-income households than the standard CPI basket.</p>
+                <p>Major inflation drivers included the impact of the Omicron variant of <strong>Covid-19</strong>, heavy rainfall that threatened crop production, limited livestock supply, and surging international oilseed prices. Oils and fats remained the most significant contributors to overall food inflation.</p>
        </div>
             <div class="step" data-step="0"> <p>Scrolling past the specific events, we can again see the overall trend as we return to the initial view.</p>
             </div>
