Change font sizes in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             padding: 1.5rem;
             border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            font-size: 1.1rem;
+            font-size: 20px;
             line-height: 1.6;
         }
         
@@ -81,7 +81,7 @@
             max-width: 90%;   /* Use more of the screen */
             margin-left: auto;  /* Center the block */
             margin-right: auto;
-            font-size: 1.15rem; /* Slightly larger text */
+            font-size: 16px; /* Slightly larger text */
           }
         }
         /* --- END OF NEW BLOCK --- */
