--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             padding: 1.5rem;
             border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            font-size: 1.1rem;
+            font-size: 18;
             line-height: 1.6;
         }
         
