--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
           /* Center text, make it larger and wider */
           .step p {
-            max-width: 90%;   /* Use more of the screen */
-            margin-left: auto;  /* Center the block */
+            max-width: 60%;   /* Use more of the screen */
+            margin-left: auto;  
             margin-right: auto;
             font-size: 1.1rem; /* Slightly larger text */
           }
