Refactor step class for final step styling
Updated the step class to step-final for the last step and adjusted margin and padding properties.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         /* The trigger area for each caption */
-                 .step {
+        .step {
             /* We've removed min-height, display, flex-direction, and justify-content */
             
             /* This creates the 100vh gap *after* the text block */
@@ -53,6 +53,11 @@
 
             /* This positions the text 25% down from the top of the screen */
             padding-top: 25vh; 
+        }
+
+        .step-final {
+            margin-bottom: 0;
+            padding-bottom: 80vh; 
         }
 
         /* The 'floating' caption box */
@@ -126,7 +131,7 @@
                 <p>BFAP explained that “the <strong>weak exchange rate of the rand</strong> in the first quarter of 2023 prevented lower international grain and oilseed prices from fully reflecting in the domestic market.” Ongoing <strong>load-shedding</strong>, high fuel prices, and escalating logistics costs further added pressure throughout the value chain.</p>
                 <p>Livestock and dairy producers faced additional strain due to lower milk production and reduced consumer demand. Beef exports were also disrupted by biosecurity challenges, which suppressed farmgate prices even as production costs continued to climb.</p>
             </div>
-            <div class="step" data-step="4">
+            <div class="step step-final" data-step="4">
                 <p><strong>2024: Slight relief, but grain prices still a concern</strong>
                 </br>By December 2024, food inflation had eased, with the Thrifty Healthy Food Basket showing just a moderate year-on-year increase. Bread and <strong>cereals</strong> prices rose only slightly, while <strong>oils and fats</strong> actually fell in price over the year. <strong>Meat products</strong> were beginning to fall a small amount in price, though sugar and non-alcoholic beverages remained elevated.</p>
                 <p>Behind the headline CPI figures, however, avocado prices surged sharply, and mutton, lamb, cabbage, bananas, dried beans, coffee, and tea also increased notably. In contrast, some items, including pasta, potatoes, onions, sunflower oil, eggs, and several meat cuts, experienced price declines.</p>
