Update CSS styles in index.html
Uncomment CSS styles for chart container and shadow.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
             margin: 0 auto; /* Center the chart container */
          /*   background-color: white; */
          /*   box-shadow: 0 4px 10px rgba(0,0,0,0.1); */
+         /*   border-radius: 8px; */
+        }
+
+        #vis .vega-embed {
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
+
 
         /* The trigger area for each caption */
         .step {
