--- a/index.html
+++ b/index.html
@@ -143,33 +143,44 @@
 
         <article>
             <div class="step" data-step="0">
+                <p><strong>How much does it cost to eat well?</strong>
+                </br><strong>The Bureau for Food and Agricultural Policy (BFAP)</strong> monitors a basket of household goods which is calls the "Thrifty Healthy Food Basket", which it says reflects the most affordable amount to eat a healthy diet.</p>
+                <p>This is separate to StatsSA's basket used to calculate food price inflation, and is designed to realistically reflect the needs and capabilities of a four-person lower-income household.</p>
+            </div>
+            
+            <div class="step" data-step="1">
+                <p><strong>The cost of a monthly shop has risen by a third in just five years</strong>
+                </br>The cost of BFAP's basket has risen by a staggering amount - almost a third - in just three years. That's almost <strong>R1 000</strong> at a time when wage increases have been minimal.</p>  
+            </div>
+            
+            <div class="step" data-step="2">
                 <p>The cost of food has been rising faster than the <strong>All Items</strong> measure of Consumer Price Inflation (CPI) for almost the whole of the last five years.</p>
                 <p>Using data from StatsSA's <strong><a href="https://www.statssa.gov.za/?cat=33">Consumer Price Index (CPI)</a></strong> and <strong><a hred="https://www.bfap.co.za/">BFAP's Food Inflation Briefs</a></strong> we've put together this recap of the underlying causes.</p>  
             </div>
-            <div class="step" data-step="1">
+            <div class="step" data-step="3">
                 <p><strong>2021: Pandemic pressures and weather challenges</strong>
                 </br>In December 2021, food price inflation was at 5.93%, driven largely by <strong>meat</strong> (8.63%) and <strong>oils</strong> (20.77%). According to BFAP, poultry - a key protein source - became more expensive across most cuts.</p>
                 <p>The <strong>Thrifty Healthy Food Basket</strong>, BFAP’s measure of the cost of a balanced diet for a family of four, also rose notably over the year. BFAP described this basket as “a nutritionally balanced combination of 26 food items from all food groups,” offering a more accurate reflection of costs for low-income households than the standard CPI basket.</p>
                 <p>Major inflation drivers included the impact of the Omicron variant of <strong>COVID-19</strong>, heavy rainfall that threatened crop production, limited livestock supply, and surging international oilseed prices. Oils and fats remained the most significant contributors to overall food inflation.</p>
        </div>
-            <div class="step" data-step="2">
+            <div class="step" data-step="4">
                 <p><strong>2022: Global shocks intensify</strong>
                 </br>By April 2022, food inflation had continued to rise even faster than in the previous year, as the invasion of Ukraine drove up the cost of transport and <strong>oils and fats once again</strong> - although these would only peak in August. Products that saw particularly sharp price growth included pasta, samp, various beef cuts, pork chops, chicken portions, frozen fish, and several types of fresh produce.</p>
                 <p>The <strong>Thrifty Healthy Food Basket</strong> also became more expensive, reflecting a notable increase from the previous year. BFAP linked this escalation to major global disruptions, including China’s zero-COVID policy and India’s restriction on wheat exports. Locally, outbreaks of foot-and-mouth disease and elevated feed prices limited cattle and poultry slaughter rates, which added further pressure to meat prices.</p>
             </div>
-            <div class="step" data-step="3">
+            <div class="step" data-step="5">
                 <p><strong>2023: The energy and exchange rate squeeze</strong>
                 </br>By March 2023, food inflation had reached its highest level, with the Thrifty Healthy Food Basket showing a substantial year-on-year increase. Basic staples such as maize meal, beef, onions, and potatoes recorded some of the most significant price hikes. <strong>Cereal products</strong> and <strong>vegetables</strong> both peaked at over 20% increases year-on-year.</p>
                 <p>BFAP explained that “the <strong>weak exchange rate of the rand</strong> in the first quarter of 2023 prevented lower international grain and oilseed prices from fully reflecting in the domestic market.” Ongoing <strong>load-shedding</strong>, high fuel prices, and escalating logistics costs further added pressure throughout the value chain.</p>
                 <p>Livestock and dairy producers faced additional strain due to lower milk production and reduced consumer demand. Beef exports were also disrupted by biosecurity challenges, which suppressed farmgate prices even as production costs continued to climb.</p>
             </div>
-            <div class="step step-penultimate" data-step="4">
+            <div class="step step-penultimate" data-step="6">
                 <p><strong>2024: Slight relief, but grain prices still a concern</strong>
                 </br>By December 2024, food inflation had eased, with the Thrifty Healthy Food Basket showing just a moderate year-on-year increase. Bread and <strong>cereals</strong> prices rose only slightly, while <strong>oils and fats</strong> actually fell in price over the year. <strong>Meat products</strong> were beginning to fall a small amount in price, though sugar and non-alcoholic beverages remained elevated.</p>
                 <p>Behind the headline CPI figures, however, avocado prices surged sharply, and mutton, lamb, cabbage, bananas, dried beans, coffee, and tea also increased notably. In contrast, some items, including pasta, potatoes, onions, sunflower oil, eggs, and several meat cuts, experienced price declines.</p>
                 <p>Global grain markets continued to influence domestic costs. BFAP noted that year-on-year comparisons for December reflected substantial increases in maize, with white maize showing the largest rise and yellow maize also climbing significantly.</p>
                 </div>
-            <div class="step step-final" data-step="5">
+            <div class="step step-final" data-step="7">
                 <p><strong>2025: Stabilising prices amid mixed inflation</strong>
                 </br>By By mid-2025, foods experiencing the highest price increases included <strong>beef cuts, mutton, lamb</strong>, and <strong>fresh produce</strong> such as tomatoes, peppers, carrots, and apples. Items with moderate inflation included starches, pork, canned fish, cabbage, avocados, peanut butter, cooking oil, and yoghurt, while wheat, pasta, rice, chicken, bananas, <strong>milk, eggs</strong>, and rooibos tea saw price declines.</p>
                 <p>BFAP observed that wheat prices softened amid global supply recovery, although local import dependency remained at 48%. Maize prices reflected tight global supply and regional drought conditions, with white maize trading at a premium. Soybean and sunflower prices tracked global trends, supported by a stronger rand and improved harvest prospects.</p>
