--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         #vis .vega-embed {
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             border-radius: 8px;
+            transition: all 0.5s ease-in-out;
         }
 
 
